Fetching one last record from the list